--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
     <meta name="keywords" content="{{ release.title }}, {{ release.genre }}, {{ release.year }}, electro, EDM, music" />
-    <meta name="description" content="{{ release.artists }} - {{ release.title }}."/>
+    <meta name="description" content="{{ release.artists }} - {{ release.title }}"/>
 
     <!-- Protocolo Open Graph -->
     <meta property="og:url" content="https://bayzamusic.com/releases/{{ release.year }}{{ page.link }}/{{ release.release }}"/>
@@ -28,13 +28,13 @@
     <meta property="og:image:alt" content="{{ release.title }} cover image"/>
     <meta property="og:image:width" content="500"/>
     <meta property="og:image:height" content="500"/>
-    <meta property="og:description" content="{{ release.description }}"/>
+    <meta property="og:description" content="{{ release.artists }} - {{ release.title }}"/>
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="https://bayzamusic.com/images/releases/{{ release.year }}/{{ release.cover }}.jpg"/>
     <meta name="twitter:title" content="{{ release.artists }} - {{ release.title }}">
-    <meta name="twitter:description" content="{{ release.description }}">
+    <meta name="twitter:description" content="{{ release.artists }} - {{ release.title }}">
     <meta name="twitter:site" content="@bayzamusic"/>
 
     <!-- Recursos -->
