--- a/css/bayza.css
+++ b/css/bayza.css
@@ -106,6 +106,9 @@ h1 {
     background: #ff7700;
 }
 
+.itunes_card {
+    background: #EA4CC0
+}
 .font-weight-sc {
     color: #b8b8b8;
 }
@@ -414,7 +417,7 @@ b a:hover {
 
 .platform-icons {
     display: inline-block;
-    padding: 10px;
+    padding: 10px 8px;
     margin: 0px!important;
     font-size: 20px;
 }
