--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -186,26 +186,18 @@
         <h3 class="mt-3 text-uppercase text-white">Listen</h3>
         <h5 class="font-weight-light">Listen to my music on your favorite platform</h5>
         <div class="mt-4">
-          <div class="platform-icons spotify_card rounded-circle">
-            <a class="text-white" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" target="_blank" title="Spotify">
-              <i class="fab fa-spotify fa-fw" aria-hidden="true"></i>
-            </a>
-          </div>
-          <div class="platform-icons soundcloud_card rounded-circle">
-            <a class="text-white" href="https://soundcloud.com/bayza" target="_blank" title="SoundCloud">
-              <i class="fab fa-soundcloud fa-fw" aria-hidden="true"></i>
-            </a>
-          </div>
-          <div class="platform-icons youtube_card rounded-circle">
-            <a class="text-white" href="https://youtube.com/c/bayza" target="_blank" title="YouTube">
-              <i class="fab fa-youtube fa-fw" aria-hidden="true"></i>
-            </a>
-          </div>
-          <div class="platform-icons soundcloud_card rounded-circle">
-            <a class="text-white" href="https://music.apple.com/us/artist/bayza/882647839?app=itunes&ls=1" target="_blank" title="iTunes Store">
-              <i class="fab fa-itunes-note fa-fw" aria-hidden="true"></i>
-            </a>
-          </div>
+          <a class="text-white platform-icons spotify_card rounded-circle" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" target="_blank" title="Spotify">
+            <i class="fab fa-spotify fa-fw" aria-hidden="true"></i>
+          </a>  
+          <a class="text-white platform-icons soundcloud_card rounded-circle" href="https://soundcloud.com/bayza" target="_blank" title="SoundCloud">
+            <i class="fab fa-soundcloud fa-fw" aria-hidden="true"></i>
+          </a>
+          <a class="text-white platform-icons youtube_card rounded-circle" href="https://youtube.com/c/bayza" target="_blank" title="YouTube">
+            <i class="fab fa-youtube fa-fw" aria-hidden="true"></i>
+          </a>
+          <a class="text-white platform-icons soundcloud_card rounded-circle" href="https://music.apple.com/us/artist/bayza/882647839?app=itunes&ls=1" target="_blank" title="iTunes Store">
+            <i class="fab fa-itunes-note fa-fw" aria-hidden="true"></i>
+          </a>
         </div>
         <div class="row text-white">
           <div class="col-lg-6">
