--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -195,7 +195,7 @@
           <a class="text-white platform-icons youtube_card rounded-circle" href="https://youtube.com/c/bayza" target="_blank" title="YouTube">
             <i class="fab fa-youtube fa-fw" aria-hidden="true"></i>
           </a>
-          <a class="text-white platform-icons soundcloud_card rounded-circle" href="https://music.apple.com/us/artist/bayza/882647839?app=itunes&ls=1" target="_blank" title="iTunes Store">
+          <a class="text-white platform-icons itunes_card rounded-circle" href="https://music.apple.com/us/artist/bayza/882647839?app=itunes&ls=1" target="_blank" title="iTunes Store">
             <i class="fab fa-itunes-note fa-fw" aria-hidden="true"></i>
           </a>
         </div>
