--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -205,6 +205,16 @@
             <a class="text-white platform-icons itunes_card rounded-circle" href="https://music.apple.com/us/artist/bayza/882647839?app=itunes&ls=1" target="_blank" title="iTunes Store">
               <i class="fab fa-itunes-note fa-fw" aria-hidden="true"></i>
             </a>
+          </div>
+          <div class="mx-1">
+            <a class="text-white platform-icons apple_card rounded-circle" href="https://music.apple.com/us/artist/bayza/882647839?app=music&ls=1" target="_blank" title="Apple Music">
+              <i class="fab fa-apple fa-fw" aria-hidden="true"></i>
+            </a>
+          </div>
+          <div class="mx-1">
+            <a class="text-white platform-icons deezer_card rounded-circle" href="https://www.deezer.com/en/artist/6003758" target="_blank" title="Deezer">
+              <i class="fab fa-deezer fa-fw" aria-hidden="true"></i>
+            </a>
           </div> 
         </div>
         <div class="row text-white">
