--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-    <footer id="contact" class="page-footer bg-dark text-white text-left font-weight-light">
+    <footer id="contact" class="page-footer bg-darkest text-white text-left font-weight-light">
       <div class="container py-5">
         <div class="row">
           <div class="col-md-4">
