--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -130,7 +130,7 @@
         </div>
       </div>
     </section>
-    <section id="latest releases" class="bg-dark">
+    <section id="latest releases" class="bg-darkest">
       <div class="container text-secondary py-5 text-center" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white">Recent Music</h3>
         <h5 class="font-weight-light">Check out my latest releases</h5>
@@ -181,11 +181,11 @@
         <a class="btn btn-outline-releases px-4 py-1" href="/releases/all" data-aos="flip-left">See all releases</a>
       </div>
     </section>
-    <section id="music" class="bg-darkest text-secondary text-center py-5">
+    <section id="music" class="bg-dark text-secondary text-center py-5">
       <div class="container" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white">Listen</h3>
-        <h5 class="font-weight-light">Listen to my music on your favorite platform</h5>
-        <div class="mt-4 d-flex justify-content-center">
+        <h5 class="font-weight-light">Stream/Buy my music on your favorite platform</h5>
+        <div class="mt-4 d-flex flex-wrap justify-content-center">
           <div class="mx-1">
             <a class="text-white platform-icons spotify_card rounded-circle" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" target="_blank" title="Spotify">
               <i class="fab fa-spotify fa-fw" aria-hidden="true"></i>
@@ -212,8 +212,23 @@
             </a>
           </div>
           <div class="mx-1">
+            <a class="text-white platform-icons beatport_card rounded-circle" href="https://www.beatport.com/artist/bayza/411994" target="_blank" title="Beatport">
+              <i class="fas fa-headphones fa-fw" aria-hidden="true"></i>
+            </a>
+          </div>
+          <div class="mx-1">
             <a class="text-white platform-icons deezer_card rounded-circle" href="https://www.deezer.com/en/artist/6003758" target="_blank" title="Deezer">
               <i class="fab fa-deezer fa-fw" aria-hidden="true"></i>
+            </a>
+          </div>
+          <div class="mx-1">
+            <a class="text-white platform-icons amazon_card rounded-circle" href="https://music.amazon.com/artists/B00KX8ETU6/bayza" target="_blank" title="Amazon Music">
+              <i class="fab fa-amazon fa-fw" aria-hidden="true"></i>
+            </a>
+          </div>
+          <div class="mx-1">
+            <a class="text-white platform-icons yandex_card rounded-circle" href="https://music.yandex.com/artist/3753809" target="_blank" title="Yandex Music">
+              <i class="fab fa-yandex fa-fw" aria-hidden="true"></i>
             </a>
           </div> 
         </div>
@@ -231,7 +246,7 @@
         </div>
       </div>
     </section>
-    <section id="yt_videos" class="bg-dark text-secondary text-center py-5">
+    <section id="yt_videos" class="bg-darkest text-secondary text-center py-5">
       <div class="container" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white">VIDEOS</h3>
         <h5 class="font-weight-light">Featured youtube videos</h5>
@@ -259,7 +274,7 @@
         </div>
       </div>
     </section>
-    <section id="about" class="bg-darkest text-secondary text-center py-5">
+    <section id="about" class="bg-dark text-secondary text-center py-5">
       <div class="container" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">About</h3>
         <div class="my-3 font-weight-light text-justify">
