--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -276,19 +276,19 @@
     </section>
     <section id="about" class="bg-dark text-secondary text-center py-5">
       <div class="container" style="overflow-x: hidden;">
-        <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">About</h3>
+        <h3 class="mt-3 text-uppercase text-white">About</h3>
         <div class="my-3 font-weight-light text-justify">
-          <p data-aos="fade-left">
+          <p>
             Ahmed Rangel, also known as 
             <b><a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" target="_blank" title="Bayza Spotify">Bayza</a></b>, is a 23 years old electronic/dance music producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>.
           </p>
-          <p data-aos="fade-right">
+          <p>
             His very first steps with music comes  in 2014 releasing a big room house music during many years. It was until 2017 when he transitioned his style to melbourne bounce. In 2019 he finds himself in deep house style which fits him perfectly. He started making remixes of famous pop songs, then in September 2019 he self-released his first album named Genuine. In 2020 Bayza mainly focused on producing deep house with slap house influence and you should looking forward for his coming tunes.
           </p>
-          <p data-aos="fade-left">
+          <p>
             In 2021 Bayza is hitting his very first 1M plays on Spotify with his <b><a href="https://bayzamusic.com/releases/2020/everythingiwanted" target="_blank" title="Everything I Wanted | Bayza">Everything I Wanted</a></b>'s cover. 
           </p>
-          <p data-aos="fade-right">
+          <p>
             He has currently signed tracks with Records Labels such as
             "<b><a href="https://instagram.com/bounceunited" target="_blank" title="Bounce United's Instagram">Bounce United</a></b>, 
             <b><a href="https://www.youtube.com/channel/UCoo_WkQMj2h-WFi7nBQjtyw" target="_blank" title="Miss DeepShine's YouTube Channel">DeepShine Records</a></b>, 
