--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -62,7 +62,7 @@
   <body>
 {% include navbar.html %}
     <section id="releases" class="bg-darkest">
-        <div class="container text-secondary text-center py-3 px-3">
+        <div class="container text-secondary text-center pt-3 pb-4 px-3">
           <h3 class="mt-5 text-uppercase text-white">{{ release.title }}</h3>
           <h4 class="font-weight-light mb-0">{{ release.artists }}</h4>
           <div id="reproductor" class="mr-5 ml-5 px-5">
