--- a/css/bayza.css
+++ b/css/bayza.css
@@ -165,7 +165,7 @@ ul.alt li {
     border-bottom: solid 1px rgba(144, 144, 144, 0.25);
     padding: 0.5em 0;
 }
-    
+
 footer li a {
     color: #b8b8b8;
 }
@@ -408,7 +408,7 @@ b a:hover {
 }
 
 .page-footer {
-    border-top: 0px;
+    border-top: 1px solid #474747;
 }
 
 .navbar-dark .navbar-nav .nav-link {
