--- a/css/bayza.css
+++ b/css/bayza.css
@@ -408,7 +408,7 @@ b a:hover {
 }
 
 .page-footer {
-    border-top: 1px solid #474747;
+    border-top: 1px solid #3a3a3a;;
 }
 
 .navbar-dark .navbar-nav .nav-link {
