--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -186,47 +186,47 @@
         <h3 class="mt-3 text-uppercase text-white">Listen</h3>
         <h5 class="font-weight-light">Stream/Buy my music on your favorite platform</h5>
         <div class="mt-4 d-flex flex-wrap justify-content-center">
-          <div class="mx-1">
+          <div class="m-1">
             <a class="text-white platform-icons spotify_card rounded-circle" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" target="_blank" title="Spotify">
               <i class="fab fa-spotify fa-fw" aria-hidden="true"></i>
             </a>
           </div>
-          <div class="mx-1">
+          <div class="m-1">
             <a class="text-white platform-icons soundcloud_card rounded-circle" href="https://soundcloud.com/bayza" target="_blank" title="SoundCloud">
               <i class="fab fa-soundcloud fa-fw" aria-hidden="true"></i>
             </a>
           </div>
-          <div class="mx-1">
+          <div class="m-1">
             <a class="text-white platform-icons youtube_card rounded-circle" href="https://youtube.com/c/bayza" target="_blank" title="YouTube">
               <i class="fab fa-youtube fa-fw" aria-hidden="true"></i>
             </a>
           </div>
-          <div class="mx-1">
+          <div class="m-1">
             <a class="text-white platform-icons itunes_card rounded-circle" href="https://music.apple.com/us/artist/bayza/882647839?app=itunes&ls=1" target="_blank" title="iTunes Store">
               <i class="fab fa-itunes-note fa-fw" aria-hidden="true"></i>
             </a>
           </div>
-          <div class="mx-1">
+          <div class="m-1">
             <a class="text-white platform-icons apple_card rounded-circle" href="https://music.apple.com/us/artist/bayza/882647839?app=music&ls=1" target="_blank" title="Apple Music">
               <i class="fab fa-apple fa-fw" aria-hidden="true"></i>
             </a>
           </div>
-          <div class="mx-1">
+          <div class="m-1">
             <a class="text-white platform-icons beatport_card rounded-circle" href="https://www.beatport.com/artist/bayza/411994" target="_blank" title="Beatport">
               <i class="fas fa-headphones fa-fw" aria-hidden="true"></i>
             </a>
           </div>
-          <div class="mx-1">
+          <div class="m-1">
             <a class="text-white platform-icons deezer_card rounded-circle" href="https://www.deezer.com/en/artist/6003758" target="_blank" title="Deezer">
               <i class="fab fa-deezer fa-fw" aria-hidden="true"></i>
             </a>
           </div>
-          <div class="mx-1">
+          <div class="m-1">
             <a class="text-white platform-icons amazon_card rounded-circle" href="https://music.amazon.com/artists/B00KX8ETU6/bayza" target="_blank" title="Amazon Music">
               <i class="fab fa-amazon fa-fw" aria-hidden="true"></i>
             </a>
           </div>
-          <div class="mx-1">
+          <div class="m-1">
             <a class="text-white platform-icons yandex_card rounded-circle" href="https://music.yandex.com/artist/3753809" target="_blank" title="Yandex Music">
               <i class="fab fa-yandex fa-fw" aria-hidden="true"></i>
             </a>
