--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -44,8 +44,10 @@
             <div class="item">
               <div class="cover">
                 <a href="/releases/{{ item.year }}{{ item.link }}/{{ item.release }}">
-                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}">
-                  <h5 class="mb-0" style="font-size: 1.25rem;"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>    
+                  <div class="overflow-hidden">
+                    <img class="img-fx img-fluid release-color-covers scale-on-hover" src="https://bayzamusic.com/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}">
+                  </div>
+                  <h5 class="mb-0" style="font-size: 1.25rem;"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>   
                 </a>
                 <small><p class="mb-0">{{ item.artists }}</p></small> 
                 <small><p class="mb-4">{{ item.date | date: "%b %-d, %Y" }}</p></small>
