--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -251,12 +251,12 @@
           </div>
           <div class="col-lg-6 mt-4">
             <div class="video-container">
-              <iframe width="1280" height="720" src="https://www.youtube-nocookie.com/embed/eKGxQxm9FUA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="1280" height="720" src="https://www.youtube-nocookie.com/embed/-vx3oZ4j4h0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
           <div class="col-lg-6 mt-4">
             <div class="video-container">
-              <iframe width="1280" height="720" src="https://www.youtube-nocookie.com/embed/-vx3oZ4j4h0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="1280" height="720" src="https://www.youtube-nocookie.com/embed/9u_UwD-WpSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
         </div>
