--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -102,8 +102,23 @@
 {% include scripts.html %}
 <script>
   $.getJSON("/json/fanlinks.json", function(result) {
-    let str = "{{ release.release }}"
-    let release_str = str.replace(/-/g, "");
+    let str = "{{ release.release }}";
+    let release_str;
+    if (str == "lo-vas-a-olvidar"){
+      release_str = "lvao";
+    }
+    else if (str == "everythingiwanted"){
+      release_str = "everything-i-wanted";
+    }
+    else if (str == "desert-rose-enta-omri"){
+      release_str = "desert-rose";
+    }
+    else if (str == "my-head-my-heart" || str == "without-you" || str == "no-guarantee" || str == "hold-on-to-me" || str == "make-believe" || str == "not-my-baby" || str == "still-learning" || str == "strawberry-shortcake"){
+      release_str = str;
+    }
+    else {
+      release_str = str.replace(/-/g, "");
+    }
     console.log(release_str);
     $.each(result[release_str][0], function(i, stores){
       if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal" && i !== "tidal-buy" && i !== "amazon-music" && i !== "download"){
