--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -133,7 +133,7 @@
           icon = "fab fa-"+i;
         }
         $("#platforms").append(
-          "<div class='mr-2'><a class='text-white platform-icons "+ i +"_card rounded-circle' href="+ stores +" target='_blank' title='"+ i +"'><i class='"+ icon +" fa-fw' aria-hidden='true'></i></a></div>");
+          "<div class='mr-2 mb-2'><a class='text-white platform-icons "+ i +"_card rounded-circle' href="+ stores +" target='_blank' title='"+ i +"'><i class='"+ icon +" fa-fw' aria-hidden='true'></i></a></div>");
         console.log(stores);
       }
     });
