--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,7 +5,7 @@
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/cc91b92ca8.js"></script>
+    <script src="https://kit.fontawesome.com/cc91b92ca8.js?1"></script>
     <script>
       AOS.init();
     </script>
