--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -176,7 +176,7 @@
         }
 
         $("#platforms").append(
-          "<div class='mr-2 mb-2'><a class='icons-fx text-white platform-icons "+ i +"_card rounded-circle' href="+ stores +" target='_blank' title='"+ store_title +"'><i class='"+ icon +" fa-fw' aria-hidden='true'></i></a></div>");
+          "<div class='mr-2 mb-2' title='"+ store_title +"><a class='icons-fx text-white platform-icons "+ i +"_card rounded-circle' href="+ stores +" target='_blank''><i class='"+ icon +" fa-fw' aria-hidden='true'></i></a></div>");
         console.log(stores);
       }
     });
